Update layout padding, typography, and dimensions, and fix key alias in build.gradle, and update map height in ULMap.tsx, and add paddingHorizontal to OTP field in getstarted/index.tsx, and adjust paddingVertical in MainAppHeader.tsx, and add BottomTabBar and SVGElements in MainApp.tsx, and adjust paddingVertical in SetLocation.tsx

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -92,7 +92,7 @@ android {
         release {
             storeFile file('grubgo.keystore')
             storePassword '107151125'
-            keyAlias 'key_alias'
+            keyAlias 'your_key_alias'
             keyPassword '107151125'
         }
     }
